dc/s2n-quic-dc/src/snapshots/stream__writer__tests__client_write_msg_first_write_sends_queue_data_init_then_blocks.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0 [main] TRACE c#credit.acquire.fast_path=1
0 [main] TRACE c#credit.acquire.bytes=1353
0 [main] DEBUG event=on_init_sent prev=Init next=InitSent location=dc/s2n-quic-dc/src/stream/writer.rs
0 [main] DEBUG Sent QueueInit with early data binding_id=1 bytes_read=1353 is_fin=false
0 [main] DEBUG Writer dropping binding_id=1 status=InitSent next_offset=1353 remote_max_data=0
0 [main] DEBUG Sent FIN binding_id=1
0 [main] DEBUG event=on_send_fin prev=InitSent next=FinSent location=dc/s2n-quic-dc/src/stream/writer.rs
0 [main] DEBUG event=on_shutdown prev=FinSent next=Shutdown location=dc/s2n-quic-dc/src/stream/writer.rs
