dc/s2n-quic-dc/src/snapshots/stream__writer__tests__credit_pool_round_trip_attaches_credits_and_admit_restores_capacity.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0 [main] DEBUG distributor created
0 [main] TRACE c#credit.distributor.passes=1
0 [main] TRACE c#credit.acquire.fast_path=1
0 [main] TRACE c#credit.acquire.bytes=5
0 [main] DEBUG event=on_init_sent prev=Init next=InitSent location=dc/s2n-quic-dc/src/stream/writer.rs
0 [main] DEBUG Sent QueueInit with early data binding_id=1 bytes_read=5 is_fin=false
0 [main] TRACE c#credit.distributor.passes=1
0 [main] TRACE c#credit.release.bytes=5
0 [main] TRACE c#credit.release.calls=1
0 [main] DEBUG poll_remote_budget received messages binding_id=1 status=InitSent msg_count=1
0 [main] DEBUG event=on_confirmed prev=InitSent next=Open location=dc/s2n-quic-dc/src/stream/writer.rs
0 [main] DEBUG Flow established binding_id=1
0 [main] TRACE c#credit.acquire.fast_path=1
0 [main] TRACE c#credit.acquire.bytes=8187
0 [main] DEBUG Writer dropping binding_id=1 status=Open next_offset=8192 remote_max_data=8192
0 [main] DEBUG Sent FIN binding_id=1
0 [main] DEBUG event=on_send_fin prev=Open next=FinSent location=dc/s2n-quic-dc/src/stream/writer.rs
0 [main] DEBUG event=on_shutdown prev=FinSent next=Shutdown location=dc/s2n-quic-dc/src/stream/writer.rs
0 [main] TRACE c#credit.release.bytes=8187
0 [main] TRACE c#credit.release.calls=1
0 [main] TRACE c#credit.distributor.passes=1
0 [main] TRACE c#credit.distributor.passes=1
0 [main] DEBUG distributor dropping; closing pool
