dc/s2n-quic-dc/src/snapshots/stream__writer__tests__data_frame_carries_blocked_bit_when_partially_windowed.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0 [main] TRACE c#credit.acquire.fast_path=1
0 [main] TRACE c#credit.acquire.bytes=3
0 [main] DEBUG Writer dropping binding_id=1 status=Open next_offset=3 remote_max_data=3
0 [main] DEBUG Sent FIN binding_id=1
0 [main] DEBUG event=on_send_fin prev=Open next=FinSent location=dc/s2n-quic-dc/src/stream/writer.rs
0 [main] DEBUG event=on_shutdown prev=FinSent next=Shutdown location=dc/s2n-quic-dc/src/stream/writer.rs
