dc/s2n-quic-dc/src/snapshots/stream__writer__tests__panic_drop_sends_abnormal_termination_reset.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0 [main] DEBUG Writer dropping binding_id=1 status=Open next_offset=0 remote_max_data=1048576
0 [main] DEBUG Sent QueueReset binding_id=1 error_code=3 reset_target=Both
0 [main] DEBUG Writer dropped during panic - sent QueueReset and cancelled transmissions binding_id=1
